Change defaults of keeping whitespace to true

Without this, any links that are on a line with leading spaces are
incorrectly handled.

BUG: 389163