src/Filter.cpp
@@ -142,8 +142,8 @@ void TerminalImageFilterChain::setImage(const Character * const image, int lines
     reset();
 
     PlainTextDecoder decoder;
-    decoder.setLeadingWhitespace(false);
-    decoder.setTrailingWhitespace(false);
+    decoder.setLeadingWhitespace(true);
+    decoder.setTrailingWhitespace(true);
 
     // setup new shared buffers for the filters to process on
     auto newBuffer = new QString();
